# speedy-charts

./: LICENSE  README.md  pyproject.toml
src/speedy_charts/: charts.py  palettes.py
src/speedy_charts/mplstyles/: standard_theme.mplstyle
tests/: create_charts.py  create_dataframes.py  import_fpl.py
